Improve `ErrorReport.output`
- Marked `ErrorReport.output(Thread, Throwable, boolean)` as `synchronized` to ensure thread safety.
- Enhanced file naming logit: if a file named `<dateTime>-<className>.txt>` or `<dateTime>-<className>-<number>.txt` exists, the method will increment `<number>` until it finds a non-existing filename, preventing accidental overwriting of existing files.